Bug: align Colby title with ontario.ca logo

--- a/ckanext/ontario_theme/fanstatic/header.less
+++ b/ckanext/ontario_theme/fanstatic/header.less
@@ -57,7 +57,7 @@
   font-size: 24px;
   line-height: 1.5;
   font-weight: 600;
-  padding-left: 1.6em;
+  padding-left: 0em;
   margin: 0;
 }
 
